--- a/resources/sass/components/_toolbar.scss
+++ b/resources/sass/components/_toolbar.scss
@@ -1,16 +1,24 @@
 .toolbar {
-  position: fixed;
-  bottom: 0;
-  left: $sidebar-width;
-  right: 0;
-  background-color: $white;
-  color: $text-base;
-  padding: 1rem 4rem;
-  border-top: 1px solid $gray-200;
-  transform: translateY(100%);
-  transition: all 400ms ease-in-out;
+    position: fixed;
+    bottom: 0;
+    left: $sidebar-width;
+    right: 0;
+    background-color: $white;
+    color: $text-base;
+    padding: 1rem 4rem;
+    border-top: 1px solid $gray-200;
+    transform: translateY(100%);
+    transition: all 400ms ease-in-out;
+    z-index: 3;
 
-  &.show {
-    transform: translateY(0);
-  }
+    &.show {
+        transform: translateY(0);
+    }
+}
+
+@media (screen and max-width: map_get($grid-breakpoints, 'md')) {
+    .toolbar {
+        padding: 1rem 0;
+        left: 0;
+    }
 }
